# test

./: README.md  codemagic.yaml  firebase.json  pubspec.yaml
.github/workflows/: ios_build.yml
android/app/: build.gradle.kts  google-services.json
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/app/src/main/cpp/include/openssl/: cms.h  configuration.h  ocsp.h  pkcs7.h  x509.h
assets/: public.pem
ios/: Podfile
ios/Runner/: AppDelegate.swift  CryptoNative.h  CryptoNative.mm  Info.plist  Runner-Bridging-Header.h
ios/Runner.xcodeproj/: project.pbxproj
lib/: custom_nav_bar.dart  home.dart  login_screen.dart  main.dart
lib/HomeScreen/AppSettings/: app_settings_screen.dart
lib/HomeScreen/Camscreen/: CameraControls.dart  (+3 more)
lib/Services/: FileMonitorService.dart  LoopbackVideoServer.dart  NativeCryptoService.dart  PrivateKeyStorageService.dart  StreamingVideoEncryptor.dart  VaultAuthGate.dart  VaultDatabaseService.dart  VaultImportService.dart  VaultKeyService.dart  VaultThumbnailService.dart  image_receiver.dart
lib/app_config/: firebase_options.dart
lib/theme/: app_theme.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
native_ios_src/: AppDelegate.swift  CryptoEngine.h  CryptoEngine.mm  Runner-Bridging-Header.h
scripts/: build_openssl_ios.sh
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+35 files in other folders)
